--- a/tickets/pos/templates/pos_home.html
+++ b/tickets/pos/templates/pos_home.html
@@ -15,6 +15,7 @@
     </a>
     {% endfor %}
     </div>
+    <a href="{% url 'order_list' %}"><button type="button" class="btn btn-primary">Mis pedidos</button></a>
   </div>
 
 {% endblock %}
