--- a/tickets/pos/templates/activate_tickets.html
+++ b/tickets/pos/templates/activate_tickets.html
@@ -8,7 +8,7 @@
     <h2 class="h3 mb-3 font-weight-normal">Asignación de entradas</h2>
     <p>Pedido de {{order.customer_name}}</p>
     <p>{{num_seats}} asiento{{num_seats | pluralize}} seleccionado{{num_seats | pluralize}}</p>
-    <div class="list-group">
+    <div class="list-group" id="seatsList">
     {% for s in seats %}
 <a href="#" id="{{s.local_code}}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
     Asiento {{s.local_code}} 
@@ -23,6 +23,11 @@
     </br>
     </br>
     <a href="{% url 'order_info' order.id %}"><button class="btn btn-lg btn-primary btn-block" type="submit">Continuar</button></a>
+
+    {% if user.is_staff %}
+    <br>
+    <button class="btn btn-lg btn-danger btn-block" onClick="generateTickets();">Generar tickets no asignados</button>
+    {% endif %}
  
   </div>
 
@@ -80,5 +85,34 @@
 <script src="{% static 'js/axios.min.js' %}"></script>
 
 <script src="{% static 'js/order_scan.js' %}"></script>
+
+{% if user.is_staff %}
+
+<script>
+function generateTickets(){
+  const seatsList = document.getElementById("seatsList");
+  const generateUrl = "{% url 'pos_generate_ticket_api' %}"
+  for (let i=0; i < seatsList.children.length;i++){
+    if (seatsList.children[i].innerHTML.includes("Asignar")){
+      axios.get(generateUrl)
+      .then (function(response){
+        console.log(response.data)
+        if (response.data.status == "ok"){
+          activeSeatCode = seatsList.children[i].id;
+          processResult("https://entradas.ruralinfra.com/t/"+response.data.qr_text);
+          (async() => {
+            await new Promise(r => setTimeout(r, 500));
+          })();
+          
+        }
+      })
+      .catch(error => console.log(error))
+      
+    }
+  }
+}
+</script>
+
+{% endif %}
 
 {% endblock %}
