--- a/tickets/pos/templates/order_list.html
+++ b/tickets/pos/templates/order_list.html
@@ -27,7 +27,7 @@
       <td>{{o.event}}</td>
       <td>{{o.customer_name}}</td>
       <td>{{o.ticket_set.count}}</td>
-      <td>{% if o.paid %}✔{% else %}<button type="button" onClick='payOrder("{{o.customer_name}}","{% url 'pay_order' o.id %}","{{o.total_price}}")' class="btn btn-primary">Pagar</button>{% endif %}</td>
+      <td>{% if o.paid %}✔{% elif o.free_order %}Gratuito{% else %}<button type="button" onClick='payOrder("{{o.customer_name}}","{% url 'pay_order' o.id %}","{{o.total_price}}")' class="btn btn-primary">Pagar</button>{% endif %}</td>
       <td>{% if o.paid %}{% else %}<button type="button" onClick='cancelOrder("{{o.customer_name}}","{% url 'cancel_order' o.id %}")' class="btn btn-danger">Cancelar</button>{% endif %}</td>
       <td><a type="button" href="{% url 'download_tickets_order' o.id %}" class="btn btn-primary">Descargar</a></td>
     </tr>
