Disable autocam in verify

--- a/tickets/pos/templates/door_ticket_verify.html
+++ b/tickets/pos/templates/door_ticket_verify.html
@@ -10,6 +10,7 @@
     <div id="mainAlert" class="alert alert-primary" role="alert">
   Escanea tickets para comprobar su validez
     </div>
+    <button class="btn btn-primary" onclick="activateCam()">Activar cámara</button>
     <video id="scanner-area"></video>
     <input type="text" id="scanner" placeholder="scanner">
 
